--- a/src/index.scss
+++ b/src/index.scss
@@ -52,7 +52,9 @@
     border-radius: 40px;
     background-color: transparent;
     color: beige;
-    padding: 5px;
+    padding: 10px;
+    padding-inline: 65px;
+    margin-inline: 35px;
     font-size: 20px;
     font-weight: 300;
 
@@ -80,9 +82,10 @@
 
 .description {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  width: 100%;
 
   h3 {
     font-size: 25px;
