--- a/src/index.scss
+++ b/src/index.scss
@@ -1,29 +1,32 @@
 :root {
-  --section-overlay: rgba(0, 0, 0, 0.23);
-  --bgc-overlay: rgba(0, 0, 0, 0.2);
+  --section-overlay: rgba(0, 0, 0, 0.6);
+  --bgc-overlay: rgba(0, 0, 0, 0.7);
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .app {
   width: 100%;
   height: 100vh;
+
 }
 
 .overlay {
   width: 100%;
   height: 100vh;
-  background-color: var(--bgc-overlay);
+  background-image: url("assets/images/Warsaw.jpeg");
+  background-position: center;
+  background-size: cover;
 
 }
 
 .container {
-  max-width: 800px;
+  max-width: 950px;
   margin: auto;
   height: 100%;
   display: flex;
@@ -49,17 +52,21 @@
   justify-content: space-between;
   background-color: var(--section-overlay);
   border-radius: 14px;
+  flex-wrap: wrap;
 
   input {
     border: 0.8px solid beige;
     border-radius: 14px;
     background-color: transparent;
     color: beige;
-    padding: 10px;
-    padding-inline: 65px;
-    margin-inline: 35px;
+    margin-right: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-inline: 50px;
     font-size: 20px;
     font-weight: 300;
+    flex-wrap: wrap;
+
 
     &:focus {
       outline: none;
@@ -77,7 +84,7 @@
 
     &:hover {
       cursor: pointer;
-      background-color: lightgrey;
+      background-color: grey;
     }
   }
 }
@@ -89,6 +96,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  padding: 10px;
 
   h3 {
     font-size: 25px;
@@ -97,6 +105,12 @@
   }
 }
 
-.temperature > h1 {
+.temperature>h1 {
   font-size: 70px;
 }
+
+//@media screen and (max-width: 700px) {
+//  .section__inputs, .section__temperature {
+//    width: 100%;
+//  }
+//}
