--- a/src/components/SecondSection.scss
+++ b/src/components/SecondSection.scss
@@ -28,8 +28,17 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 700px) {
   .section {
     grid-template-columns: 1fr;
   }
 }
+
+
+@media screen and (max-width: 700px) {
+  .weather-description {
+    font-size: 16px;
+  }
+}
+
+
