--- a/src/index.scss
+++ b/src/index.scss
@@ -133,13 +133,19 @@
     width: 100%;
   }
   input {
-    margin-inline: auto;
+    padding-inline: 20px;
   }
 }
 
 @media screen and (max-width: 700px) {
   .description > h3, h1 {
     font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .app {
+    height: 150vh;
   }
 }
 
