--- a/src/index.scss
+++ b/src/index.scss
@@ -54,8 +54,8 @@
   input {
     border: 0.8px solid beige;
     border-radius: 14px;
-    background-color: transparent;
-    color: beige;
+    background-color: beige;
+    color: rgba(0, 0, 0, 0.6);
     margin-right: auto;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -132,9 +132,6 @@
     margin-bottom: 10px;
     width: 100%;
   }
-  input {
-    padding-inline: 20px;
-  }
 }
 
 @media screen and (max-width: 700px) {
@@ -148,6 +145,7 @@
     height: 150vh;
   }
 }
+
 
 
 
